Enhance SHACL Validation Service and Webview Results
- Refactor shaclValidatorService.ts for improved readability and organization.
- Add raw SHACL validation report serialization to Turtle format.
- Introduce a button in the webview to view the raw report.
- Update validationResultsViewProvider.ts to handle raw report display.
- Improve term search logic in the editor for better matching of validation results.
- Ensure consistent formatting and code style across both files.

--- a/package.json
+++ b/package.json
@@ -123,6 +123,18 @@
         "command": "vscode-shacl-validator.selectDataDocumentForFocusNodes",
         "title": "SHACL: Select Data Document for Focus Nodes",
         "category": "SHACL"
+      },
+      {
+        "command": "vscode-shacl-validator.replaceDataGraph",
+        "title": "SHACL: Replace Data Graph File",
+        "category": "SHACL",
+        "icon": "$(file-symlink-file)"
+      },
+      {
+        "command": "vscode-shacl-validator.replaceShapesGraph",
+        "title": "SHACL: Replace Shapes Graph File",
+        "category": "SHACL",
+        "icon": "$(file-symlink-file)"
       }
     ],
     "menus": {
@@ -156,6 +168,16 @@
           "command": "vscode-shacl-validator.deleteSession",
           "when": "view == shaclPlayground && viewItem == shaclValidationSession",
           "group": "2_modification@2"
+        },
+        {
+          "command": "vscode-shacl-validator.replaceDataGraph",
+          "when": "view == shaclPlayground && viewItem == shaclValidationSession.dataGraph",
+          "group": "1_modification@1"
+        },
+        {
+          "command": "vscode-shacl-validator.replaceShapesGraph",
+          "when": "view == shaclPlayground && viewItem == shaclValidationSession.shapesGraph",
+          "group": "1_modification@1"
         }
       ],
       "view/title": [
